--- a/_locales/zh/pinpinwa-strings.json
+++ b/_locales/zh/pinpinwa-strings.json
@@ -36,7 +36,7 @@
     "ppw.wasIrDataReceived|block": "接收到红外数据",
     "{id:subcategory}C33 IR Recv": "C33 红外接收",
     "{id:group}C33 IR Receiver": "C33 红外接收",
-    "{id:grounp}Controller": "遥控器",
+    "{id:group}Controller": "遥控器",
 
     "ppw.clear|block": "清除显示",
     "ppw.drawLine|block": "画线条 起点:|x: $x0 y: $y0 终点| x: $x1 y: $y1",
@@ -50,7 +50,7 @@
     "ppw.writeString|block": "显示字符串 $str",
     "{id:subcategory}OLED": "C81 OLED",
 
-    "ppw.intensity|block":"亮度",
+    "ppw.TM1637LEDs.intensity|block":"亮度",
     "ppw.showbit|block":"%tm|显示数字 %num |在 %bit",
     "ppw.showNumber|block":"%tm|显示数 %num",
     "ppw.showHex|block":"%tm|显示16进制数 %num",
